--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.OceanBrasil20250513"
         tools:targetApi="31">
         <activity
+            android:name=".Resultado2Activity"
+            android:exported="false" >
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
